# nano-chat-NPU

./: 4NPU_TRAINING_GUIDE.md  BATCH_SIZE_GUIDE.md  DEPLOY_4NPU.md  FINEWEB_TRAINING_GUIDE.md  HUAWEI_DATASET_GUIDE.md  NPU使用技巧.md  PLATFORM_START_COMMAND.md  README.md  README_ASCEND.md  RUSTBPE_FIX.md  batch_download_hf.sh  build_rustbpe.sh  calculate_batch_config.py  check_4npu_setup.py  check_data_files.sh  check_npu.py  check_npu_memory.sh  check_single_npu_status.sh  clean_2npu.sh  clean_4npu.sh  clean_npu_environment.sh  cleanup_data.sh  cleanup_excess_data.sh  clear_npu_memory.py  conservative_fineweb_train.sh  conservative_single_npu.sh  debug_2npu.sh  debug_4npu_hccl.sh  debug_config.py  debug_config.sh  debug_full_training.sh  debug_muon_single_npu.sh  debug_nanochat_module.sh  debug_simple_train.sh  debug_training.sh  diagnose_hccl.sh  diagnose_muon.sh  diagnose_npu_devices.sh  diagnose_training.sh  direct_single_npu_train.py  (+131 more)
nanochat/: adamw.py  adamw_fixed.py  common.py  dataloader.py  engine.py  gpt.py  loss_eval.py  muon.py  report.py
scripts/: base_eval.py  base_loss.py  base_train.py  base_train_muon_fixed.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  mid_train.py
